--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Jacob Celestine!</h1>
-				<p>Don't trust me. <a href="/about">Read more about my life...</a></p>
+				<p>Don't trust me.</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
