--- a/storiesoflife/privacypolicy.html
+++ b/storiesoflife/privacypolicy.html
@@ -7,7 +7,7 @@
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
-    <h2>Privacy Policy</h2> <p>  built the Stories Of Life app as an Open Source app. This SERVICE is provided by
+    <h2>Privacy Policy</h2> <p>Stories Of Life app as an Open Source app. This SERVICE is provided by
                      at no cost and is intended for use as is.
                   </p> <p>This page is used to inform visitors regarding my policies with the collection, use, and disclosure
                     of Personal Information if anyone decided to use my Service.
