--- a/storiesoflife/privacypolicy.html
+++ b/storiesoflife/privacypolicy.html
@@ -4,6 +4,7 @@
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
+      <link rel="stylesheet" type="text/css" href="/css/main.css">
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body>
