--- a/storiesoflife/terms.html
+++ b/storiesoflife/terms.html
@@ -3,7 +3,7 @@
    <head>
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
-      <title>Privacy Policy</title>
+      <title>Terms of Service</title>
       <link rel="stylesheet" type="text/css" href="/css/main.css">
       <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
    </head>
@@ -94,8 +94,21 @@
          the new Privacy Policy on this page. These changes are effective immediately after they are posted on
          this page.
       </p>
-      <p><strong>Contact Us</strong></p>
+      
+      <h2>Content Policy</h2>
+      <p> The content of this app is user generated. I do not accept any responsibility or liability to the accuracy, content, 
+         completeness, reliability and legality of the information posted on this app/website/page. No warranties, promises 
+         and/or representations of any kind, expressed or implied, are given as to the nature, standard, accuracy or otherwise of the 
+         information provided in this app/website/page nor to the suitability or otherwise of the information. The 
+         views/thoughts/opinions expressed by individuals featured on this platform have been shared with the full knowledge and 
+         consent of the individual and are solely their own and I do not claim any responsibility/ownership or liability for the same. I
+         shall not be held liable for loss or damage of any nature which may arise as a result of this app/website/page. This platform 
+         may provide links to websites owned by third parties. II do not take responsibility for the content of these third party 
+         websites. In addition, I will not be held responsible for the accuracy of third party advertisements. If some content needs 
+         to be removed, please contact me and I will look into it and take suitable action.
+      </p>
+      <h2>Contact Us</h2>
       <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
-         me at jacobceles@gmail.com.
+         me at jacobceles@gmail.com.</p>
    </body>
 </html>
