--- a/storiesoflife/changelog.html
+++ b/storiesoflife/changelog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Changelog</title>
-        <style></style>
+        <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body id="preview">
         <h2><a id="sol_changelog_0"></a>Stroies of Life changelog
