--- a/storiesoflife/changelog.html
+++ b/storiesoflife/changelog.html
@@ -6,7 +6,7 @@
         <style> body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; padding:1em; } </style>
     </head>
     <body id="preview">
-        <h2><a id="sol_changelog_0"></a>Stroies of Life changelog
+        <h2><a id="sol_changelog"></a>SOL Changelog
         </h2>
         <h3><a id="version"></a>Version 1.0
         </h3>
