--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -13081,10 +13081,10 @@ div#notebook {
 It goes through basic <a href="https://spark.apache.org/docs/latest/api/python/index.html">PySpark Functions</a> and a short introduction on how to use <a href="https://colab.research.google.com/notebooks/basic_features_overview.ipynb">Colab</a>. <br>
 The reason why I used colab is because of its shareability and free GPU. Yeah you read that right. A FREE GPU! In the words of Google: <br>
 <code>Colaboratory, or “Colab” for short, is a product from Google Research. Colab allows anybody to write and execute arbitrary python code through the browser, and is especially well suited to machine learning, data analysis and education. More technically, Colab is a hosted Jupyter notebook service that requires no setup to use, while providing free access to computing resources including GPUs.</code> <br>
-If you have more questions about colab, <a href="https://research.google.com/colaboratory/faq.html">refer this link</a> <br></p>
+If you have more questions about colab, <a href="https://research.google.com/colaboratory/faq.html">REFER THIS LINK</a> <br></p>
 <p>All you need is an internet connection to keep a session alive. If you lose the connection you will have to download the datasets again.<br>
-If you want to view my colab notebook you can do it <a href="https://colab.research.google.com/drive/1G894WS7ltIUTusWWmsCnF_zQhQqZCDOc">here</a>. The viewing experience and readability is much better there. <br>
-If you want to try out things with this notebook as a base, feel free to download it from my repo <a href="https://github.com/jacobceles/jacobceles.github.io">here</a> and then use it with jupyter notebook.</p>
+If you want to view my colab notebook you can do it <a href="https://colab.research.google.com/drive/1G894WS7ltIUTusWWmsCnF_zQhQqZCDOc">HERE</a>. The viewing experience and readability is much better there. <br>
+If you want to try out things with this notebook as a base, feel free to download it from my repo <a href="https://github.com/jacobceles/knowledge-repo/blob/master/pyspark/Colab%20and%20PySpark.ipynb">HERE</a> and then use it with jupyter notebook.</p>
 
 </div>
 </div>
