--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -4169,7 +4169,7 @@ The fair scheduler supports grouping jobs into pools and setting different sched
   </div>
 </body>
 
- 
-
+<br><br>
+<p style="font-size:8pt; line-height:10pt; font-family: 'Cambria','times roman',serif; color: #fff">This site provides applications using data that has been modified for use from its original source, www.cityofchicago.org, the official website of the City of Chicago. The City of Chicago makes no claims as to the content, accuracy, timeliness, or completeness of any of the data provided at this site. The data provided at this site is subject to change at any time. It is understood that the data provided at this site is being used at one’s own risk.</p>
 
 </html>
