--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -8,6 +8,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
 <link rel="stylesheet" href="default.css">
+<link rel="shortcut icon" type="image/x-icon" href="/assets/icons/favicon.ico"/>
 
 <!-- Loading mathjax macro -->
 <!-- Load mathjax -->
