Updated with width and heigth

--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -8,6 +8,8 @@
 <meta property="og:title" content="Introduction to Google Colab PySpark, EC2 Instances"/>
 <meta property="og:description" content="Once you complete this notebook, you should be able to write pyspark programs in an efficent way. The ideal way to use this is by going through the examples given and then trying them on Colab. At the end there are a few hands on questions which you can use to evaluate yourself.">
 <meta property="og:image" content="https://jacobcelestine.com/assets/img/pyspark_colab_emr.jpg"/>
+<meta property="og:image:width" content="2500" />
+<meta property="og:image:height" content="1458" />
 
 <title>Colab and PySpark</title>
 
