--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Security-Policy" content="default-src * self blob: data: gap:; style-src * self 'unsafe-inline' blob: data: gap:; script-src * 'self' 'unsafe-eval' 'unsafe-inline' blob: data: gap:; object-src * 'self' blob: data: gap:; img-src * self 'unsafe-inline' blob: data: gap:; connect-src self * 'unsafe-inline' blob: data: gap:; frame-src * self blob: data: gap:;">
 <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://jacobcelestine.com/knowledge_repo/colab_and_pyspark/"/>
 <meta prefix="og: http://ogp.me/ns#" property="og:type" content="article"/>
-<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Introduction to Google Colab PySpark, EC2 Instances"/>
-<meta prefix="og: http://ogp.me/ns#" property="og:description" content="Once you complete this notebook, you should be able to write pyspark programs in an efficent way. The ideal way to use this is by going through the examples given and then trying them on Colab. At the end there are a few hands on questions which you can use to evaluate yourself.">
+<meta prefix="og: http://ogp.me/ns#" property="og:title" content="Introduction to Google Colab, PySpark and EC2 Instances"/>
+<meta prefix="og: http://ogp.me/ns#" property="og:description" content="A tutorial that helps Big Data Engineers ramp up faster by getting familiar with PySpark dataframes and functions. It also covers topics like EMR sizing, Google Colaboratory, fine-tuning PySpark jobs, and much more.">
 <meta prefix="og: http://ogp.me/ns#" property="og:image" content="https://jacobcelestine.com/assets/img/pyspark_colab_emr.jpg"/>
 <meta prefix="og: http://ogp.me/ns#" property="og:image:width" content="2500" />
 <meta prefix="og: http://ogp.me/ns#" property="og:image:height" content="1458" />
