Updated with links instead of files

--- a/thanos/index_backup.html
+++ b/thanos/index_backup.html
@@ -25,12 +25,12 @@
       <script type="text/javascript" src="js/jsonform.js"></script>
       <script type="text/javascript">
 
-        $.getJSON('https://jacobcelestine.com/thanos/json/source_components.json', function(sourceJson) {
+        $.getJSON('/json/source_components.json', function(sourceJson) {
           getForm(sourceJson)
         });
 
         function getForm(sourceJson){
-           $.getJSON('https://jacobcelestine.com/thanos/json/form_components.json', function(formJson) {
+           $.getJSON('/json/form_components.json', function(formJson) {
              generateForm(sourceJson, formJson)
            });
         }
