Added new sources

--- a/thanos/index_backup.html
+++ b/thanos/index_backup.html
@@ -30,7 +30,7 @@
         });
 
         function getForm(sourceJson){
-           $.getJSON('/json/form_components.json', function(formJson) {
+           $.getJSON('/json/source_form.json', function(formJson) {
              generateForm(sourceJson, formJson)
            });
         }
