Fixed naming issue

--- a/thanos/index.html
+++ b/thanos/index.html
@@ -78,7 +78,7 @@
           });
 
         function getTransformationForm(transformationComponents) {
-          $.getJSON('https://jacobcelestine.com/thanos/json/transformations_form.json', function (targetForm) {
+          $.getJSON('https://jacobcelestine.com/thanos/json/transformations_form.json', function (transformationForm) {
             generateForm(transformationComponents, transformationForm, "transformations")
           });
         }
