Added back required imports

--- a/thanos/index.html
+++ b/thanos/index.html
@@ -45,11 +45,12 @@
             </div>
          </div>
       </section>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
       <script type="text/javascript" src="js/jquery.min.js"></script>
       <script type="text/javascript" src="js/underscore.js"></script>
       <script type="text/javascript" src="js/jsonform.js"></script>
       <script type="text/javascript">
-
         $.getJSON('https://jacobcelestine.com/thanos/json/sources_components.json', function (sourceComponents) {
             getSourceForm(sourceComponents)
           });
