--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -1,1 +1,3 @@
-Content taken down due to issues with datasst. Will be back with another one soon.
+<html>
+  <p>Content taken down due to issues with datasst. Will be back with another one soon.</p>
+</html>
