--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -1,3 +1,3 @@
 <html>
-  <p>Content taken down due to issues with datasst. Will be back with another one soon.</p>
+  <p>Content taken down due to issues with dataset. Will be back with another one soon.</p>
 </html>
