--- a/knowledge_repo/colab_and_pyspark/index.html
+++ b/knowledge_repo/colab_and_pyspark/index.html
@@ -1,3 +1,5 @@
 <html>
-  <p>Content taken down due to issues with dataset. Will be back with another one soon.</p>
+  <p>Hello! Thanks for visiting</p>
+  <p>As this tutorial has been gainig a lot of traction recently, I have decided to update the dependencies and write it in a better way using another dataset.</p>
+  <p>It should be done within two days, so please check back on 2nd April 2021.</p>
 </html>
